--- a/directives/src/app/app.component.html
+++ b/directives/src/app/app.component.html
@@ -1,3 +1,14 @@
 <!--<app-directive-ng-if></app-directive-ng-if>-->
 <!--<app-directive-ng-switch></app-directive-ng-switch>-->
-<app-directive-ng-for></app-directive-ng-for>
+<!--<app-directive-ng-for></app-directive-ng-for>-->
+<!--<app-directive-ng-class></app-directive-ng-class>-->
+<!--app-directive-elvis></!--app-directive-elvis>-->
+<app-ng-content>
+    conteudo passado para o conponente.
+    <app-directive-ng-for></app-directive-ng-for>
+</app-ng-content>
+
+<app-ng-content>
+    <div class="title">Titulo da pagina </div>
+    <div class="body">Corpo da pagina</div>
+</app-ng-content>
