Service sharing information

--- a/diretivesBackground/src/app/app.component.html
+++ b/diretivesBackground/src/app/app.component.html
@@ -1,1 +1,1 @@
-<p appDirectBackground>Background Yellow</p>
+<p appDirectBackground [colorDefault]="'red'" [colorChange]="'gray'">Background Yellow</p>
